Fixed Sitemap on Tablets
I fixed the arrangement of the sitemap elements so that they now appear in a 1x5 grid, in which each element appears one to the side of other. This is for tablets and for phones in horizontal mode.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -799,8 +799,11 @@ so that I don't have 8 navbar links inside of the side navbar.  */
   padding: $side-margins;
 
   /* This will create a 1x5 grid, which will contain most of the footer text on computer and tablet screens. This will contain
-  the social media icons and its respective title, and the links of the sitemap */
-  @media only screen and (min-width: $tablet-min-width) {
+  the social media icons and its respective title, and the links of the sitemap.
+  
+  I will only execute this on screens of at least 1280px of width (that is, on computer screens.) */
+  @media only screen and (min-width: $computer-min-width) {
+
     /* This grid will create 1 row and 2 columns. The 1st column will have the "Follow us" text and the social media icons.
     Meanwhile, the 2nd column will have the entirety of the sitemap. */
     .grid-1x2-social-media {
@@ -866,8 +869,10 @@ so that I don't have 8 navbar links inside of the side navbar.  */
     to apply as well for iPhone 5 screens in horizontal mode.
     
     For the time being, I want this to apply to all screens that are thinner than a tablet screen. I don't need 
-    to specify a minimum nor a maximum screen height.*/
-    @media only screen and (max-width: $tablet-min-width) {
+    to specify a minimum nor a maximum screen height.
+    
+    I want this to also apply on tablet screens (of less than 1280px of width.) */
+    @media only screen and (max-width: $computer-min-width) {
       text-align: center;
     }
   }
@@ -943,11 +948,38 @@ so that I don't have 8 navbar links inside of the side navbar.  */
         }
       }
 
-      
       // div {
       //   text-align: center; // This will center each link to the center of their respective div
       // }
     }
+  }
+}
+
+/* This will create the 1x5 grid which will contain all of the sitemap links for tablet screens only
+(for screens between 767 px and 1279 px).
+
+Due to the amount of divs that I used in my html code, I will have to create 3 grids in here: a giant 1x2 grid,
+a small 1x3 grid, and a small 1x2 grid. 
+
+The 1x2 grid will contain everything. The 1x3 grid will contain "Portfolio", "About", and "Contact". Finally, the last 1x2 
+grid will contain the "Privacy" and "Terms" links, and will add it to the 2nd column of the giant 1x2 grid. */
+@media only screen and (min-width: $tablet-min-width) and (max-width: $computer-min-width) {
+  .sitemap-grid-1x5-tablets-part-1 {
+    display: grid; 
+    grid-template-columns: auto auto; /* This creates the giant 1x2 grid */
+    text-align: center;
+  }
+
+  .sitemap-grid-1x5-tablets-part-2 {
+    display: grid; 
+    grid-template-columns: auto auto auto; /* This creates the small 1x3 grid */
+    text-align: center;
+  }
+
+  .sitemap-grid-1x5-tablets-part-3 {
+    display: grid; 
+    grid-template-columns: auto auto; /* This creates the small 1x2 grid */
+    text-align: center;
   }
 }
 
@@ -970,8 +1002,10 @@ padding bottom or top */
   low height, since that would make this code execute in most screens (both large and small).
   
   Since I want to center the social media icons to the center of the whole footer in all screens that thinner than 
-  a tablet, there's no point in specifying a minimum nor a maximum height. */
-  @media only screen and (max-width: $tablet-min-width) {
+  a tablet, there's no point in specifying a minimum nor a maximum height. 
+  
+  I want this to also be executed on tablet screens that are smaller than 1280 px of width. */
+  @media only screen and (max-width: $computer-min-width) {
     display: flex;
     justify-content: center;
     align-items: center;
